# blog_os

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  env.toml  exec_linker.ld  get_llvm_libcalls.py  libcalls.txt  x86_64-blog_os.json
.cargo/: config.toml
blog_os_vfs/: Cargo.toml
blog_os_vfs/src/: lib.rs
docs/: main.typ
drivers/: Cargo.toml  Makefile.toml  x86_64-unknown-blog_os-kdriver.json
drivers/.cargo/: config.toml
drivers/kdriver_std/: Cargo.toml
drivers/kdriver_std/src/: lib.rs
drivers/pci/: Cargo.toml
drivers/pci/src/: bus.rs  lib.rs
drivers/test_driver/: Cargo.toml
drivers/test_driver/.cargo/: config.toml
drivers/test_driver/src/: lib.rs
initrd/: init
initrd/drivers/: test_driver.ko
kernel/: Cargo.toml  Makefile.toml
kernel-libs/: Cargo.toml  Makefile.toml
kernel-libs/api-utils/: Cargo.toml
kernel-libs/api-utils/src/: iter.rs  lib.rs
kernel-libs/blog_os-c-interface/: Cargo.toml
kernel-libs/blog_os-c-interface/src/: lib.rs
kernel-libs/blog_os-device/: Cargo.toml
kernel-libs/blog_os-device-api/: Cargo.toml  Makefile.toml  cbindgen.toml
kernel-libs/blog_os-device-api/src/: bus.rs  lib.rs
kernel-libs/blog_os-device-api/src/bus/: device_driver.rs
kernel-libs/blog_os-device/src/: bus.rs  lib.rs
kernel-libs/blog_os-log/: Cargo.toml
kernel-libs/blog_os-log/src/: lib.rs
kernel-libs/blog_os-pci/: Cargo.toml
kernel-libs/blog_os-pci/src/: bus.rs  class.rs  config.rs  id.rs  lib.rs  metadata.rs  pattern.rs
kernel-libs/blog_os-syscalls/: Cargo.toml
kernel-libs/blog_os-syscalls/src/: lib.rs
kernel-libs/blog_os_vfs/: Cargo.toml
kernel-libs/blog_os_vfs/src/: dentry.rs  fs.rs  inode.rs  lib.rs  path.rs
kernel-libs/blog_os_vfs/tests/: simple_root_fs.rs
kernel-libs/blog_os_vfs/tests/common/: fs.rs
kernel-libs/blog_os_vfs_api/: Cargo.toml
kernel-libs/blog_os_vfs_api/src/: block.rs  device.rs  file.rs  fs.rs  inode.rs  lib.rs  path.rs  stat.rs
kernel-libs/blog_os_vfs_api/src/path/: ffi.rs
kernel-libs/initcpio/: Cargo.toml
kernel-libs/initcpio/src/: lib.rs
kernel-libs/io_error/: Cargo.toml
kernel-libs/io_error/src/: lib.rs
kernel-libs/kdriver-api/: Cargo.toml  Makefile.toml  cbindgen.toml
kernel-libs/kdriver-api/src/: lib.rs
kernel-libs/kdriver_std/src/: lib.rs
kernel-libs/kernel-utils/src/: aligned_bytes.rs  lib.rs  maybe_boxed.rs  no_heap_vec.rs  simple_slotmap.rs  smallmap.rs  try_from_iterator.rs
kernel-libs/path/: Cargo.toml
kernel-libs/path/src/: lib.rs  path.rs
kernel-libs/path/src/path/: ffi_safe.rs
kernel-libs/ramfs/: Cargo.toml
kernel-libs/ramfs/src/: fs.rs  inode.rs  lib.rs  superblock.rs
kernel-libs/ramfs/src/inode/: directory.rs  regular.rs
kernel-libs/shared_fs/: Cargo.toml
kernel-libs/shared_fs/src/: dirent.rs  lib.rs
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  bus.rs  config.rs  device.rs  driver.rs  dwarf.rs  eh.rs  elf.rs  framebuffer.rs  fs.rs  gdt.rs  interrupts.rs  io.rs  lib.rs  main.rs  memory.rs  multitask.rs  priviledge.rs  process.rs  rand.rs  setup.rs  stack.rs  unwind.rs  util.rs
kernel/src/bus/: pci.rs
kernel/src/bus/pci/: bus.rs  class.rs  config.rs  id.rs  metadata.rs  pattern.rs
kernel/src/driver/: registry.rs
kernel/src/elf/: symbol.rs
kernel/src/fs/: ramfs.rs  sysfs.rs
kernel/src/fs/sysfs/: const_dir.rs  device.rs  driver.rs  proc.rs  root.rs
kernel/src/interrupts/: info.rs  stub.rs  syscalls.rs
kernel/src/interrupts/syscalls/: brk.rs  close.rs  exit.rs  flush.rs  init_driver.rs  next_direntry.rs  nop.rs  open.rs  read.rs  stat.rs  write.rs  yield_syscall.rs
kernel/src/io/: framebuffer.rs  logger.rs  qemu.rs  serial.rs
kernel/src/io/logger/: data.rs  structured.rs
kernel/src/memory/: free_tables.rs  multi_l4_paging.rs  pages.rs  range_alloc.rs
kernel/src/multitask/: lock.rs  round_robin.rs  scheduler.rs  switching.rs  task.rs
kernel/src/process/: stdio.rs
kernel/src/progs/: test_prog
kernel/src/unwind/: eh.rs  elf_debug.rs  register.rs
kernel/src/util/: maybe_boxed.rs  no_heap_vec.rs  smallmap.rs
make-utils/: Cargo.toml
make-utils/src/: main.rs
qemu-common/: Cargo.toml
qemu-common/src/: lib.rs
runner/: Cargo.toml  Makefile.toml
runner/src/: disk.rs  main.rs
src/: main.rs
test_prog/: Cargo.toml
test_prog/src/: main.rs
userspace/: Cargo.toml  Makefile.toml  rust-toolchain.toml
userspace/.cargo/: config.toml
userspace/blog_os_init/: Cargo.toml
userspace/blog_os_init/src/: main.rs
userspace/blog_std/: Cargo.toml
userspace/blog_std/src/: file.rs  fs.rs  io.rs  lib.rs  lock.rs  memory.rs  syscalls.rs
userspace/blogsh/: Cargo.toml
userspace/ls/: Cargo.toml
userspace/ls/src/: main.rs
userspace/test_prog/: Cargo.toml
userspace/test_prog/.cargo/: config.toml
userspace/test_prog/src/: main.rs
