[package]
name = "blog_os_kernel"
version = "0.1.0"
edition = "2024"
default-run = "blog_os_kernel"

[dependencies]
bootloader_api = "0.11.12"
bootloader-x86_64-common = "0.11.12"
spin = "0.10.0"
x86_64 = "0.15.2"
pic8259 = "0.11.0"
qemu-common = {path = "../qemu-common"}
blog_os_vfs = {path = "../blog_os_vfs"}
pc-keyboard = "0.8.0"
talc = "4.4.3"
object = { version = "0.37.3", default-features = false, features = ["read_core", "elf", "core", "alloc"] }
bitflags = "2.10.0"
gimli = {version = "0.32.3", default-features = false, features = ["read", "rustc-dep-of-std", "fallible-iterator", "endian-reader"]}
addr2line = { version = "0.25.1", default-features = false, features = ["rustc-demangle", "cpp_demangle", "fallible-iterator", "smallvec", "rustc-dep-of-std"] }
lock_api = "0.4.14"
uuid = { version = "1.18.1", default-features = false }
smallvec = "1.15.1"

[[bin]]
name = "blog_os_kernel"
test = true
bench = false

[lib]
test = true
bench = false
