[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.11.12"
clap = { version = "4.5.53", features = ["derive", "env"] }
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.2.4"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
qemu-common = {path = "../qemu-common"}
dunce = "1.0.5"
kpea = "0.2.4"
