[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.11.12"
clap = { version = "4.5.53", features = ["derive", "env"] }
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.2.4"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
qemu-common = {path = "../qemu-common"}
dunce = "1.0.5"
cpio = "0.4.1"
walkdir = "2.5.0"
anyhow = "1.0.100"
humansize = "2.1.3"
