[package]
name = "pci"
version = "0.1.0"
edition = "2024"


[lib]
test=false
bench=false
crate-type = ["cdylib"]

[dependencies]
kdriver_std = {path = "../../kernel-libs/kdriver_std"}
blog_os-pci = {path = "../../kernel-libs/blog_os-pci"}
api-utils = {path = "../../kernel-libs/api-utils"}
blog_os-device-api = {path = "../../kernel-libs/blog_os-device-api"}
