[package]
name = "ramfs"
version = "0.1.0"
edition = "2024"

[dependencies]
lock_api = "0.4.14"
slotmap = { version = "1.0.7", default-features = false }
blog_os_vfs_api = {path = "../blog_os_vfs_api"}
blog_os-device-api = {path = "../blog_os-device-api"}
api-utils = {path = "../api-utils"}
log = "0.4.28"
shared_fs = {path = "../shared_fs"}
